# pkm-ai-interface

./: .env.example  .env.template  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
.taskmaster/: prd.md
docs/: OPENAPI_SPEC.md  SECRET_RETRIEVAL.md  architecture.md  architecture.mmd  openapi_trim.json  terraform_skeleton.md
infra/: .terraform.lock.hcl  analytics_firehose.tf  apigw.tf  cloudwatch.tf  cognito.tf  iam.tf  lambda.tf  outputs.tf  variables.tf
scripts/: generate_openapi.sh  setup.sh
src/: Dockerfile  analytics_transformer.py  entrypoint.sh  handler.py  logger.py  token_loader.py
tests/: conftest.py  test_analytics_logging.py  test_error_handling.py  test_generate_openapi.py  test_placeholder.py  test_roam_proxy.py
tests/contract/: test_analytics_transformer_contract.py
tests/data/: openapi.json
tests/integration/: test_handler_proxy_integration.py
tests/performance/: test_analytics_transformer_performance.py
tests/security/: test_bandit_scan.py
tests/smoke/: test_fetch_and_append.py
tests/unit/: test_analytics_transformer.py  test_handler_secrets.py  test_token_loader.py
