[project]
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ['E', 'F', 'I']
ignore = []

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'lf'
